--- a/lang/de.json
+++ b/lang/de.json
@@ -1,16 +1,20 @@
 {
-    "(GitHub Actions, GitLab CI)": "",
+    "(GitHub Actions, GitLab CI)": "(GitHub Actions, GitLab CI)",
     "2022 - Present": "2022 - aktuell",
+    "A new article has been published on the blog!": "Ein neuer Artikel wurde im Blog veröffentlicht!",
+    "A new article has been published:": "Ein neuer Artikel wurde im Blog veröffentlicht:",
     "A reset link will be sent if the account exists.": "Ein Reset-Link wird gesendet, wenn das Konto existiert.",
     "API Design & Development": "API-Design & Entwicklung",
     "About me": "Über mich",
     "Actions": "Aktionen",
+    "All rights reserved.": "Alle Rechte vorbehalten.",
     "Appearance": "Aussehen",
     "Are you sure?": "Bist du sicher?",
     "Back to all Categories": "Zurück zu allen Kategorien",
     "Back to all Tags": "Zurück zu allen Tags",
     "Back to all posts": "Zurück zu allen Beiträgen",
     "Best Practices": "Best Practices",
+    "Blog": "Blog",
     "Blog - Technology and Programming Articles": "Blog - Technologische und Programmierungsartikel",
     "Blog Categories": "Blog-Kategorien",
     "Blog Posts": "Blog-Beiträge",
@@ -23,19 +27,22 @@
     "Category created successfully": "Kategorie erfolgreich erstellt",
     "Category deleted successfully": "Kategorie erfolgreich gelöscht",
     "Category updated successfully": "Kategorie erfolgreich aktualisiert",
+    "Check your email to confirm your subscription.": "Überprüfen Sie Ihre E-Mail, um Ihr Abonnement zu bestätigen.",
     "Clean code, testing strategies, and development workflows": "Sauberer Code, Teststrategien und Entwicklungsabläufe",
     "Comment text": "Kommentartext",
     "Comments": "Kommentare",
     "Confirm subscription": "Abonnement bestätigen",
+    "Contact": "Kontakt",
     "Contact Me": "Kontaktieren Sie mich",
     "Content": "Inhalt",
-    "Continuous Integration & Deployment": "",
+    "Continuous Integration & Deployment": "Continuous Integration & Deployment",
     "Create Category": "Kategorie erstellen",
     "Create Post": "Beitrag erstellen",
     "Create Tag": "Tag erstellen",
     "Created": "Erstellt",
     "Database & Cache": "Datenbank & Cache",
     "Database Optimization": "Datenbankoptimierung",
+    "Dear": "Sehr geehrte\/r",
     "Delete": "Löschen",
     "Design Patterns": "Entwurfsmuster",
     "DevOps": "DevOps",
@@ -44,15 +51,17 @@
     "Enter your email": "Geben Sie Ihre E-Mail ein",
     "Featured Articles": "Ausgewählte Artikel",
     "Forgot password?": "Passwort vergessen?",
-    "Fullstack Development": "",
+    "Fullstack Development": "Fullstack Development",
     "Get notified about new articles and resources on PHP development and DevOps practices": "Erhalten Sie Benachrichtigungen über neue Artikel und Ressourcen zur PHP-Entwicklung und DevOps-Praktiken",
     "Home": "Startseite",
     "I respect your privacy. Unsubscribe at any time": "Ich respektiere Ihre Privatsphäre. Sie können sich jederzeit abmelden",
     "I'm a passionate PHP developer with 3 years of professional experience in Laravel and Symfony frameworks. I specialize in building robust web applications and implementing DevOps practices. I also have extensive experience in modern JavaScript development, working with React and Vue.js to create responsive and interactive user interfaces.": "Ich bin ein begeisterter PHP-Entwickler mit 3 Jahren Berufserfahrung in Laravel und Symfony-Frameworks. Ich spezialisiere mich auf das Entwickeln robuster Webanwendungen und die Umsetzung von DevOps-Praktiken. Ich habe außerdem umfassende Erfahrung in moderner JavaScript-Entwicklung mit React und Vue.js, um responsive und interaktive Benutzeroberflächen zu erstellen.",
     "Ideo Sp. z o.o.": "Ideo Sp. z o.o.",
+    "If you did not request this email, you can safely ignore it.": "Wenn Sie diese E-Mail nicht erwartet haben, können Sie sie ignorieren.",
     "If you did not subscribe, you can ignore this email.": "Wenn Sie sich nicht angemeldet haben, können Sie diese E-Mail ignorieren.",
-    "If you want to unsubscribe, you can do so by clicking the link below:": "Wenn Sie sich abmelden möchten, klicken Sie auf den folgenden Link:",
-    "Javascript (React, Vue)": "",
+    "If you want to unsubscribe, you can do so by clicking the button below:": "Wenn Sie sich abmelden möchten, können Sie dies durch Klicken auf die Schaltfläche unten tun:",
+    "Invalid token!": "Ungültiges Token!",
+    "Javascript (React, Vue)": "Javascript (React, Vue)",
     "Language": "Sprache",
     "Laravel & Symfony tips, patterns, and architectural insights": "Laravel & Symfony Tipps, Muster und architektonische Einblicke",
     "Latest": "Neueste",
@@ -64,6 +73,10 @@
     "Manage Tags": "Tags verwalten",
     "My technical journey started with PHP, but quickly evolved to embrace modern development practices, containerization, CI\/CD pipelines, and frontend technologies. I believe in clean code, thorough testing, and continuous improvement. My full-stack approach allows me to build complete solutions from database to user interface.": "Meine technische Reise begann mit PHP, aber ich habe schnell zu modernen Entwicklungspraktiken, Containerisierung, CI\/CD-Pipelines und Frontend-Technologien übergegangen. Ich glaube an sauberen Code, durchdachtes Testen und stetige Verbesserung. Mein Full-Stack-Ansatz ermöglicht es mir, vollständige Lösungen von der Datenbank bis zur Benutzeroberfläche zu erstellen.",
     "MySQL, PostgreSQL": "MySQL, PostgreSQL",
+    "New post on the blog!": "Neuer Beitrag im Blog!",
+    "Newsletter Confirmation Mail": "Bestätigung des Newsletter-Abonnements",
+    "Newsletter Confirmed": "Newsletter-Abonnement bestätigt",
+    "Newsletter Subscription Confirmed": "Newsletter-Abonnement bestätigt",
     "Next": "Nächster",
     "Next comments page": "Nächste Kommentarsseite",
     "Next page": "Nächste Seite",
@@ -71,6 +84,7 @@
     "No tags found": "Keine Tags gefunden",
     "Oldest": "Älteste",
     "PHP": "PHP",
+    "PHP & DevOps Blog": "PHP & DevOps Blog",
     "PHP (Laravel, Symfony)": "PHP (Laravel, Symfony)",
     "PHP Developer & DevOps Engineer": "PHP-Entwickler & DevOps-Ingenieur",
     "PHP Frameworks": "PHP-Frameworks",
@@ -79,6 +93,9 @@
     "Password": "Passwort",
     "Performance Optimization": "Leistungsoptimierung",
     "Pick a date": "Datum auswählen",
+    "Post created successfully": "Beitrag erfolgreich erstellt",
+    "Post deleted successfully": "Beitrag erfolgreich gelöscht",
+    "Post updated successfully": "Beitrag erfolgreich aktualisiert",
     "Posts": "Beiträge",
     "Previous": "Vorheriger",
     "Previous comments page": "Vorherige Kommentarsseite",
@@ -107,28 +124,41 @@
     "Stay Updated": "Bleiben Sie auf dem Laufenden",
     "Submit Comment": "Kommentar senden",
     "Subscribe": "Abonnieren",
+    "Tag created successfully": "Tag erfolgreich erstellt",
+    "Tag deleted successfully": "Tag erfolgreich gelöscht",
+    "Tag updated successfully": "Tag erfolgreich aktualisiert",
     "Tags": "Tags",
     "Technical Skills": "Technische Fähigkeiten",
     "Technical insights, best practices, and deep dives into Laravel, Symfony, and modern DevOps solutions": "Technische Einblicke, Best Practices und tiefgehende Analysen zu Laravel, Symfony und modernen DevOps-Lösungen",
     "Testing (PHPUnit, Pest)": "Testen (PHPUnit, Pest)",
+    "Thank you for confirming your newsletter subscription!": "Vielen Dank für die Bestätigung Ihres Newsletter-Abonnements!",
     "Thank you for subscribing to the newsletter!": "Vielen Dank für Ihr Abonnement des Newsletters!",
+    "Thank you for your time.": "Vielen Dank für Ihre Zeit.",
     "The email field is required": "Das E-Mail-Feld ist erforderlich",
     "The email is already subscribed": "Diese E-Mail ist bereits abonniert",
     "The email must be a valid email address": "Die E-Mail muss eine gültige E-Mail-Adresse sein",
     "This action cannot be undone. This will permanently delete this category.": "Diese Aktion kann nicht rückgängig gemacht werden. Diese Kategorie wird dauerhaft gelöscht.",
     "This action cannot be undone. This will permanently delete this post.": "Diese Aktion kann nicht rückgängig gemacht werden. Dieser Beitrag wird dauerhaft gelöscht.",
     "This action cannot be undone. This will permanently delete this tag.": "Diese Aktion kann nicht rückgängig gemacht werden. Dieses Tag wird dauerhaft gelöscht.",
+    "This email was sent to": "Diese E-Mail wurde gesendet an",
     "Through this blog, I share my experiences, best practices, and insights into PHP development, JavaScript frameworks, and DevOps methodologies. Whether you're a beginner or an experienced developer, I hope you'll find valuable content that helps you in your own technical journey.": "Durch diesen Blog teile ich meine Erfahrungen, Best Practices und Einblicke in die PHP-Entwicklung, JavaScript-Frameworks und DevOps-Methoden. Ob Sie Anfänger oder erfahrener Entwickler sind, hoffe ich, dass Sie wertvolle Inhalte finden, die Ihnen bei Ihrer eigenen technischen Reise helfen.",
     "Title": "Titel",
     "Title A-Z": "Titel A-Z",
     "Title Z-A": "Titel Z-A",
-    "To confirm your subscription, click the link below:": "Um Ihr Abonnement zu bestätigen, klicken Sie auf den folgenden Link:",
+    "To confirm your subscription, click the button below:": "Um Ihr Abonnement zu bestätigen, klicken Sie auf die Schaltfläche unten:",
     "Translation Key": "Übersetzungsschlüssel",
     "Unsubscribe": "Abmelden",
+    "Unsubscribed from newsletter": "Abbestellung des Newsletters",
     "View all": "Alle anzeigen",
     "Write your comment here...": "Schreiben Sie Ihren Kommentar hier...",
+    "You are already subscribed to our newsletter.": "Sie sind bereits für unseren Newsletter angemeldet.",
+    "You are already subscribed!": "Sie sind bereits angemeldet!",
     "You have not created any tags yet.": "Sie haben noch keine Tags erstellt.",
     "You have successfully subscribed to our newsletter!": "Sie haben sich erfolgreich für unseren Newsletter angemeldet!",
+    "You have successfully unsubscribed from our newsletter.": "Sie haben sich erfolgreich von unserem Newsletter abgemeldet.",
+    "You have successfully unsubscribed from our newsletter. If you did not request this, please contact us.": "Sie haben sich erfolgreich von unserem Newsletter abgemeldet. Wenn Sie dies nicht veranlasst haben, kontaktieren Sie uns bitte.",
+    "You have unsubscribed from the newsletter": "Sie haben den Newsletter abbestellt",
+    "You will now receive updates about new articles and content.": "Sie werden jetzt Updates über neue Artikel und Inhalte erhalten.",
     "You will receive an email every time a new article is published.": "Sie erhalten eine E-Mail, wenn ein neuer Artikel veröffentlicht wird.",
     "auth.failed": "Diese Anmeldeinformationen stimmen nicht mit unseren Aufzeichnungen überein.",
     "auth.password": "Das eingegebene Passwort ist falsch.",
@@ -136,16 +166,5 @@
     "comment": "Kommentar",
     "comments": "Kommentare",
     "min read": "min. Lesezeit",
-    "of": "von",
-    "You have unsubscribed from the newsletter": "Sie haben den Newsletter abbestellt",
-    "Dear": "Sehr geehrte/r",
-    "You have successfully unsubscribed from our newsletter. If you did not request this, please contact us.": "Sie haben sich erfolgreich von unserem Newsletter abgemeldet. Wenn Sie dies nicht veranlasst haben, kontaktieren Sie uns bitte.",
-    "Thank you for your time.": "Vielen Dank für Ihre Zeit.",
-    "Newsletter Confirmation Mail": "Bestätigung des Newsletter-Abonnements",
-    "Newsletter Confirmed": "Newsletter-Abonnement bestätigt",
-    "A new article has been published: \" :title\"": "Ein neuer Artikel wurde veröffentlicht: \" :title\"",
-    "A new article has been published on the blog!": "Ein neuer Artikel wurde im Blog veröffentlicht!",
-    "This email was sent to": "Diese E-Mail wurde gesendet an",
-    "If you did not request this email, you can safely ignore it.": "Wenn Sie diese E-Mail nicht erwartet haben, können Sie sie ignorieren.",
-    "All rights reserved.": "Alle Rechte vorbehalten."
+    "of": "von"
 }
