--- a/lang/en.json
+++ b/lang/en.json
@@ -1,16 +1,20 @@
 {
     "(GitHub Actions, GitLab CI)": "(GitHub Actions, GitLab CI)",
     "2022 - Present": "2022 - Present",
+    "A new article has been published on the blog!": "A new article has been published on the blog!",
+    "A new article has been published:": "A new article has been published:",
     "A reset link will be sent if the account exists.": "A reset link will be sent if the account exists.",
     "API Design & Development": "API Design & Development",
     "About me": "About me",
     "Actions": "Actions",
+    "All rights reserved.": "All rights reserved.",
     "Appearance": "Appearance",
     "Are you sure?": "Are you sure?",
     "Back to all Categories": "Back to all Categories",
     "Back to all Tags": "Back to all Tags",
     "Back to all posts": "Back to all posts",
     "Best Practices": "Best Practices",
+    "Blog": "Blog",
     "Blog - Technology and Programming Articles": "Blog - Technology and Programming Articles",
     "Blog Categories": "Blog Categories",
     "Blog Posts": "Blog Posts",
@@ -23,10 +27,12 @@
     "Category created successfully": "Category created successfully",
     "Category deleted successfully": "Category deleted successfully",
     "Category updated successfully": "Category updated successfully",
+    "Check your email to confirm your subscription.": "Check your email to confirm your subscription.",
     "Clean code, testing strategies, and development workflows": "Clean code, testing strategies, and development workflows",
     "Comment text": "Comment text",
     "Comments": "Comments",
     "Confirm subscription": "Confirm subscription",
+    "Contact": "Contact",
     "Contact Me": "Contact Me",
     "Content": "Content",
     "Continuous Integration & Deployment": "Continuous Integration & Deployment",
@@ -36,6 +42,7 @@
     "Created": "Created",
     "Database & Cache": "Database & Cache",
     "Database Optimization": "Database Optimization",
+    "Dear": "Dear",
     "Delete": "Delete",
     "Design Patterns": "Design Patterns",
     "DevOps": "DevOps",
@@ -50,8 +57,10 @@
     "I respect your privacy. Unsubscribe at any time": "I respect your privacy. Unsubscribe at any time",
     "I'm a passionate PHP developer with 3 years of professional experience in Laravel and Symfony frameworks. I specialize in building robust web applications and implementing DevOps practices. I also have extensive experience in modern JavaScript development, working with React and Vue.js to create responsive and interactive user interfaces.": "I'm a passionate PHP developer with 3 years of professional experience in Laravel and Symfony frameworks. I specialize in building robust web applications and implementing DevOps practices. I also have extensive experience in modern JavaScript development, working with React and Vue.js to create responsive and interactive user interfaces.",
     "Ideo Sp. z o.o.": "Ideo Sp. z o.o.",
+    "If you did not request this email, you can safely ignore it.": "If you did not request this email, you can safely ignore it.",
     "If you did not subscribe, you can ignore this email.": "If you did not subscribe, you can ignore this email.",
-    "If you want to unsubscribe, you can do so by clicking the link below:": "If you want to unsubscribe, you can do so by clicking the link below:",
+    "If you want to unsubscribe, you can do so by clicking the button below:": "If you want to unsubscribe, you can do so by clicking the button below:",
+    "Invalid token!": "Invalid token!",
     "Javascript (React, Vue)": "Javascript (React, Vue)",
     "Language": "Language",
     "Laravel & Symfony tips, patterns, and architectural insights": "Laravel & Symfony tips, patterns, and architectural insights",
@@ -64,6 +73,10 @@
     "Manage Tags": "Manage Tags",
     "My technical journey started with PHP, but quickly evolved to embrace modern development practices, containerization, CI\/CD pipelines, and frontend technologies. I believe in clean code, thorough testing, and continuous improvement. My full-stack approach allows me to build complete solutions from database to user interface.": "My technical journey started with PHP, but quickly evolved to embrace modern development practices, containerization, CI\/CD pipelines, and frontend technologies. I believe in clean code, thorough testing, and continuous improvement. My full-stack approach allows me to build complete solutions from database to user interface.",
     "MySQL, PostgreSQL": "MySQL, PostgreSQL",
+    "New post on the blog!": "New post on the blog!",
+    "Newsletter Confirmation Mail": "Newsletter Confirmation Mail",
+    "Newsletter Confirmed": "Newsletter Confirmed",
+    "Newsletter Subscription Confirmed": "Newsletter Subscription Confirmed",
     "Next": "Next",
     "Next comments page": "Next comments page",
     "Next page": "Next page",
@@ -71,6 +84,7 @@
     "No tags found": "No tags found",
     "Oldest": "Oldest",
     "PHP": "PHP",
+    "PHP & DevOps Blog": "PHP & DevOps Blog",
     "PHP (Laravel, Symfony)": "PHP (Laravel, Symfony)",
     "PHP Developer & DevOps Engineer": "PHP Developer & DevOps Engineer",
     "PHP Frameworks": "PHP Frameworks",
@@ -79,6 +93,9 @@
     "Password": "Password",
     "Performance Optimization": "Performance Optimization",
     "Pick a date": "Pick a date",
+    "Post created successfully": "Post created successfully",
+    "Post deleted successfully": "Post deleted successfully",
+    "Post updated successfully": "Post updated successfully",
     "Posts": "Posts",
     "Previous": "Previous",
     "Previous comments page": "Previous comments page",
@@ -107,28 +124,41 @@
     "Stay Updated": "Stay Updated",
     "Submit Comment": "Submit Comment",
     "Subscribe": "Subscribe",
+    "Tag created successfully": "Tag created successfully",
+    "Tag deleted successfully": "Tag deleted successfully",
+    "Tag updated successfully": "Tag updated successfully",
     "Tags": "Tags",
     "Technical Skills": "Technical Skills",
     "Technical insights, best practices, and deep dives into Laravel, Symfony, and modern DevOps solutions": "Technical insights, best practices, and deep dives into Laravel, Symfony, and modern DevOps solutions",
     "Testing (PHPUnit, Pest)": "Testing (PHPUnit, Pest)",
+    "Thank you for confirming your newsletter subscription!": "Thank you for confirming your newsletter subscription!",
     "Thank you for subscribing to the newsletter!": "Thank you for subscribing to the newsletter!",
+    "Thank you for your time.": "Thank you for your time.",
     "The email field is required": "The email field is required",
     "The email is already subscribed": "The email is already subscribed",
     "The email must be a valid email address": "The email must be a valid email address",
     "This action cannot be undone. This will permanently delete this category.": "This action cannot be undone. This will permanently delete this category.",
     "This action cannot be undone. This will permanently delete this post.": "This action cannot be undone. This will permanently delete this post.",
     "This action cannot be undone. This will permanently delete this tag.": "This action cannot be undone. This will permanently delete this tag.",
+    "This email was sent to": "This email was sent to",
     "Through this blog, I share my experiences, best practices, and insights into PHP development, JavaScript frameworks, and DevOps methodologies. Whether you're a beginner or an experienced developer, I hope you'll find valuable content that helps you in your own technical journey.": "Through this blog, I share my experiences, best practices, and insights into PHP development, JavaScript frameworks, and DevOps methodologies. Whether you're a beginner or an experienced developer, I hope you'll find valuable content that helps you in your own technical journey.",
     "Title": "Title",
     "Title A-Z": "Title A-Z",
     "Title Z-A": "Title Z-A",
-    "To confirm your subscription, click the link below:": "To confirm your subscription, click the link below:",
+    "To confirm your subscription, click the button below:": "To confirm your subscription, click the button below:",
     "Translation Key": "Translation Key",
     "Unsubscribe": "Unsubscribe",
+    "Unsubscribed from newsletter": "Unsubscribed from newsletter",
     "View all": "View all",
     "Write your comment here...": "Write your comment here...",
+    "You are already subscribed to our newsletter.": "You are already subscribed to our newsletter.",
+    "You are already subscribed!": "You are already subscribed!",
     "You have not created any tags yet.": "You have not created any tags yet.",
     "You have successfully subscribed to our newsletter!": "You have successfully subscribed to our newsletter!",
+    "You have successfully unsubscribed from our newsletter.": "You have successfully unsubscribed from our newsletter.",
+    "You have successfully unsubscribed from our newsletter. If you did not request this, please contact us.": "You have successfully unsubscribed from our newsletter. If you did not request this, please contact us.",
+    "You have unsubscribed from the newsletter": "You have unsubscribed from the newsletter",
+    "You will now receive updates about new articles and content.": "You will now receive updates about new articles and content.",
     "You will receive an email every time a new article is published.": "You will receive an email every time a new article is published.",
     "auth.failed": "auth.failed",
     "auth.password": "auth.password",
