--- a/lang/pl.json
+++ b/lang/pl.json
@@ -1,16 +1,20 @@
 {
-    "(GitHub Actions, GitLab CI)": "",
+    "(GitHub Actions, GitLab CI)": "(GitHub Actions, GitLab CI)",
     "2022 - Present": "2022 - obecnie",
+    "A new article has been published on the blog!": "Na blogu pojawił się nowy artykuł!",
+    "A new article has been published:": "Na blogu pojawił się nowy artykuł:",
     "A reset link will be sent if the account exists.": "Link do resetowania hasła zostanie wysłany, jeśli konto istnieje.",
     "API Design & Development": "Projektowanie i rozwój API",
     "About me": "O mnie",
     "Actions": "Akcje",
+    "All rights reserved.": "Wszelkie prawa zastrzeżone.",
     "Appearance": "Wygląd",
     "Are you sure?": "Jesteś pewien?",
     "Back to all Categories": "Wróć do wszystkich kategorii",
     "Back to all Tags": "Wróć do wszystkich tagów",
     "Back to all posts": "Wróć do wszystkich postów",
     "Best Practices": "Najlepsze praktyki",
+    "Blog": "Blog",
     "Blog - Technology and Programming Articles": "Blog - Artykuły technologiczne i programistyczne",
     "Blog Categories": "Kategorie bloga",
     "Blog Posts": "Posty na blogu",
@@ -23,19 +27,22 @@
     "Category created successfully": "Kategoria została pomyślnie utworzona",
     "Category deleted successfully": "Kategoria została pomyślnie usunięta",
     "Category updated successfully": "Kategoria została pomyślnie zaktualizowana",
+    "Check your email to confirm your subscription.": "Sprawdź swój email, aby potwierdzić subskrypcję.",
     "Clean code, testing strategies, and development workflows": "Czysty kod, strategie testowania i przepływy pracy",
     "Comment text": "Treść komentarza",
     "Comments": "Komentarze",
     "Confirm subscription": "Potwierdź subskrypcję",
+    "Contact": "Kontakt",
     "Contact Me": "Skontaktuj się ze mną",
     "Content": "Treść",
-    "Continuous Integration & Deployment": "",
+    "Continuous Integration & Deployment": "Continuous Integration & Deployment",
     "Create Category": "Stwórz kategorię",
     "Create Post": "Stwórz post",
     "Create Tag": "Stwórz tag",
     "Created": "Utworzono",
     "Database & Cache": "Baza danych i pamięć podręczna",
     "Database Optimization": "Optymalizacja bazy danych",
+    "Dear": "Drogi",
     "Delete": "Usuń",
     "Design Patterns": "Wzorce projektowe",
     "DevOps": "DevOps",
@@ -44,15 +51,17 @@
     "Enter your email": "Wpisz swój email",
     "Featured Articles": "Artykuły wyróżnione",
     "Forgot password?": "Zapomniałeś hasła?",
-    "Fullstack Development": "",
+    "Fullstack Development": "Fullstack Development",
     "Get notified about new articles and resources on PHP development and DevOps practices": "Otrzymuj powiadomienia o nowych artykułach i zasobach dotyczących programowania w PHP i praktyk DevOps",
     "Home": "Strona główna",
     "I respect your privacy. Unsubscribe at any time": "Szanuję Twoją prywatność. Możesz zrezygnować w każdej chwili",
     "I'm a passionate PHP developer with 3 years of professional experience in Laravel and Symfony frameworks. I specialize in building robust web applications and implementing DevOps practices. I also have extensive experience in modern JavaScript development, working with React and Vue.js to create responsive and interactive user interfaces.": "Jestem pasjonującym programistą PHP z 3-letnim doświadczeniem w frameworkach Laravel i Symfony. Specjalizuję się w budowaniu niezawodnych aplikacji internetowych i implementacji praktyk DevOps. Mam również bogate doświadczenie w nowoczesnym programowaniu JavaScript, pracując z React i Vue.js do tworzenia responsywnych i interaktywnych interfejsów użytkownika.",
     "Ideo Sp. z o.o.": "Ideo Sp. z o.o.",
+    "If you did not request this email, you can safely ignore it.": "Jeśli nie spodziewałeś się tego maila, możesz go zignorować.",
     "If you did not subscribe, you can ignore this email.": "Jeśli nie subskrybowałeś, możesz zignorować ten email.",
-    "If you want to unsubscribe, you can do so by clicking the link below:": "Jeśli chcesz zrezygnować z subskrypcji, kliknij w poniższy link:",
-    "Javascript (React, Vue)": "",
+    "If you want to unsubscribe, you can do so by clicking the button below:": "Jeśli chcesz zrezygnować z subskrypcji, kliknij przycisk poniżej:",
+    "Invalid token!": "Nieprawidłowy token!",
+    "Javascript (React, Vue)": "Javascript (React, Vue)",
     "Language": "Język",
     "Laravel & Symfony tips, patterns, and architectural insights": "Porady dotyczące Laravel i Symfony, wzorce i spostrzeżenia architektoniczne",
     "Latest": "Najnowsze",
@@ -64,6 +73,10 @@
     "Manage Tags": "Zarządzaj tagami",
     "My technical journey started with PHP, but quickly evolved to embrace modern development practices, containerization, CI\/CD pipelines, and frontend technologies. I believe in clean code, thorough testing, and continuous improvement. My full-stack approach allows me to build complete solutions from database to user interface.": "Moja podróż techniczna zaczęła się od PHP, ale szybko ewoluowała do przyjęcia nowoczesnych praktyk programistycznych, konteneryzacji i CI\/CD. Wierzę w czysty kod, dokładne testowanie i ciągłe doskonalenie. Moja podejście full-stack pozwala mi budować kompletne rozwiązania od bazy danych do interfejsu użytkownika.",
     "MySQL, PostgreSQL": "MySQL, PostgreSQL",
+    "New post on the blog!": "Nowy post na blogu!",
+    "Newsletter Confirmation Mail": "Potwierdzenie subskrypcji newslettera",
+    "Newsletter Confirmed": "Subskrypcja newslettera potwierdzona",
+    "Newsletter Subscription Confirmed": "Subskrypcja newslettera potwierdzona",
     "Next": "Następna",
     "Next comments page": "Następna strona komentarzy",
     "Next page": "Następna strona",
@@ -71,6 +84,7 @@
     "No tags found": "Nie znaleziono tagów",
     "Oldest": "Najstarsze",
     "PHP": "PHP",
+    "PHP & DevOps Blog": "Blog PHP & DevOps",
     "PHP (Laravel, Symfony)": "PHP (Laravel, Symfony)",
     "PHP Developer & DevOps Engineer": "Programista PHP i inżynier DevOps",
     "PHP Frameworks": "Frameworki PHP",
@@ -79,6 +93,9 @@
     "Password": "Hasło",
     "Performance Optimization": "Optymalizacja wydajności",
     "Pick a date": "Wybierz datę",
+    "Post created successfully": "Post został pomyślnie utworzony",
+    "Post deleted successfully": "Post został pomyślnie usunięty",
+    "Post updated successfully": "Post został pomyślnie zaktualizowany",
     "Posts": "Posty",
     "Previous": "Poprzednia",
     "Previous comments page": "Poprzednia strona komentarzy",
@@ -107,28 +124,41 @@
     "Stay Updated": "Bądź na bieżąco",
     "Submit Comment": "Wyślij komentarz",
     "Subscribe": "Subskrybuj",
+    "Tag created successfully": "Tag został pomyślnie utworzony",
+    "Tag deleted successfully": "Tag został pomyślnie usunięty",
+    "Tag updated successfully": "Tag został pomyślnie zaktualizowany",
     "Tags": "Tagi",
     "Technical Skills": "Umiejętności techniczne",
-    "Technical insights, best practices, and deep dives into Laravel, Symfony, and modern DevOps solutions": "Techniczne spostrzeżenia, najlepsze praktyki i dogłębne analizy Laravel, Symfony i nowoczesnych rozwiązań DevOps",
+    "Technical insights, best practices, and deep dives into Laravel, Symfony, and modern DevOps solutions": "Techniczne spostrzeżenia, najlepsze praktyki i dogłębne analizy frameworków Laravel, Symfony oraz nowoczesnych rozwiązań DevOps",
     "Testing (PHPUnit, Pest)": "Testowanie (PHPUnit, Pest)",
+    "Thank you for confirming your newsletter subscription!": "Dziękujemy za potwierdzenie subskrypcji newslettera!",
     "Thank you for subscribing to the newsletter!": "Dziękujemy za subskrypcję newslettera!",
+    "Thank you for your time.": "Dziękujemy za Twój czas.",
     "The email field is required": "Pole email jest wymagane",
     "The email is already subscribed": "Ten email jest już zasubskrybowany",
     "The email must be a valid email address": "Email musi być prawidłowym adresem email",
     "This action cannot be undone. This will permanently delete this category.": "Tej akcji nie można cofnąć. To trwale usunie tę kategorię.",
     "This action cannot be undone. This will permanently delete this post.": "Tej akcji nie można cofnąć. To trwale usunie ten post.",
     "This action cannot be undone. This will permanently delete this tag.": "Tej akcji nie można cofnąć. To trwale usunie ten tag.",
+    "This email was sent to": "Ten email został wysłany do",
     "Through this blog, I share my experiences, best practices, and insights into PHP development, JavaScript frameworks, and DevOps methodologies. Whether you're a beginner or an experienced developer, I hope you'll find valuable content that helps you in your own technical journey.": "Przez ten blog dzielę się swoimi doświadczeniami, najlepszymi praktykami i wglądem do programowania w PHP, JavaScript i praktyk DevOps. Niezależnie od tego, czy jesteś początkującym programistą, czy doświadczonym programistą, mam nadzieję, że znajdziesz wartościowe materiały, które pomogą Ci w swojej podróży technicznej.",
     "Title": "Tytuł",
     "Title A-Z": "Tytuł A-Z",
     "Title Z-A": "Tytuł Z-A",
-    "To confirm your subscription, click the link below:": "Aby potwierdzić subskrypcję, kliknij w poniższy link:",
+    "To confirm your subscription, click the button below:": "Aby potwierdzić subskrypcję, kliknij przycisk poniżej:",
     "Translation Key": "Klucz tłumaczenia",
     "Unsubscribe": "Zrezygnuj z subskrypcji",
+    "Unsubscribed from newsletter": "Zrezygnowałeś z newslettera",
     "View all": "Pokaż wszystkie",
     "Write your comment here...": "Napisz swój komentarz tutaj...",
+    "You are already subscribed to our newsletter.": "Jesteś już zasubskrybowany do naszego newslettera.",
+    "You are already subscribed!": "Jesteś już zasubskrybowany!",
     "You have not created any tags yet.": "Nie utworzyłeś jeszcze żadnych tagów.",
     "You have successfully subscribed to our newsletter!": "Pomyślnie zasubskrybowałeś nasz newsletter!",
+    "You have successfully unsubscribed from our newsletter.": "Pomyślnie zrezygnowałeś z naszego newslettera.",
+    "You have successfully unsubscribed from our newsletter. If you did not request this, please contact us.": "Pomyślnie zrezygnowałeś z naszego newslettera. Jeśli to nie Ty, skontaktuj się z nami.",
+    "You have unsubscribed from the newsletter": "Zrezygnowałeś z newslettera",
+    "You will now receive updates about new articles and content.": "Będziesz otrzymywać powiadomienia o nowych artykułach i treściach.",
     "You will receive an email every time a new article is published.": "Będziesz otrzymywać email za każdym razem, gdy zostanie opublikowany nowy artykuł.",
     "auth.failed": "Błędne dane logowania.",
     "auth.password": "Podane hasło jest nieprawidłowe.",
@@ -136,16 +166,5 @@
     "comment": "komentarz",
     "comments": "Komentarze",
     "min read": "min. czytania",
-    "of": "z",
-    "You have unsubscribed from the newsletter": "Zrezygnowałeś z newslettera",
-    "Dear": "Drogi",
-    "You have successfully unsubscribed from our newsletter. If you did not request this, please contact us.": "Pomyślnie zrezygnowałeś z naszego newslettera. Jeśli to nie Ty, skontaktuj się z nami.",
-    "Thank you for your time.": "Dziękujemy za Twój czas.",
-    "Newsletter Confirmation Mail": "Potwierdzenie subskrypcji newslettera",
-    "Newsletter Confirmed": "Subskrypcja newslettera potwierdzona",
-    "A new article has been published: \" :title\"": "Opublikowano nowy artykuł: \" :title\"",
-    "A new article has been published on the blog!": "Na blogu pojawił się nowy artykuł!",
-    "This email was sent to": "Ten email został wysłany do",
-    "If you did not request this email, you can safely ignore it.": "Jeśli nie spodziewałeś się tego maila, możesz go zignorować.",
-    "All rights reserved.": "Wszelkie prawa zastrzeżone."
+    "of": "z"
 }
