[Feat] Update translations

--- a/lang/de.json
+++ b/lang/de.json
@@ -65,6 +65,7 @@
     "Language": "Sprache",
     "Laravel & Symfony tips, patterns, and architectural insights": "Laravel & Symfony Tipps, Muster und architektonische Einblicke",
     "Latest": "Neueste",
+    "Learn more about Dominik Jasiński - PHP Developer & DevOps Engineer with expertise in Laravel, Symfony, React, and modern development practices.": "Mehr über Dominik Jasiński - PHP-Entwickler & DevOps-Ingenieur mit Expertise in Laravel, Symfony, React und modernen Entwicklungspraktiken",
     "Leave a comment": "Kommentar hinterlassen",
     "Log in to your account": "Anmelden zu Ihrem Konto",
     "Log out": "Abmelden",
