--- a/lang/en.json
+++ b/lang/en.json
@@ -65,6 +65,7 @@
     "Language": "Language",
     "Laravel & Symfony tips, patterns, and architectural insights": "Laravel & Symfony tips, patterns, and architectural insights",
     "Latest": "Latest",
+    "Learn more about Dominik Jasiński - PHP Developer & DevOps Engineer with expertise in Laravel, Symfony, React, and modern development practices.": "Learn more about Dominik Jasiński - PHP Developer & DevOps Engineer with expertise in Laravel, Symfony, React, and modern development practices.",
     "Leave a comment": "Leave a comment",
     "Log in to your account": "Log in to your account",
     "Log out": "Log out",
