--- a/lang/pl.json
+++ b/lang/pl.json
@@ -65,6 +65,7 @@
     "Language": "Język",
     "Laravel & Symfony tips, patterns, and architectural insights": "Porady dotyczące Laravel i Symfony, wzorce i spostrzeżenia architektoniczne",
     "Latest": "Najnowsze",
+    "Learn more about Dominik Jasiński - PHP Developer & DevOps Engineer with expertise in Laravel, Symfony, React, and modern development practices.": "Dowiedz się więcej o Dominiku Jasińskim - programiście PHP i inżynierze DevOps z doświadczeniem w frameworkach Laravel, Symfony, React i nowoczesnych praktykach programistycznych",
     "Leave a comment": "Zostaw komentarz",
     "Log in to your account": "Zaloguj się do swojego konta",
     "Log out": "Wyloguj się",
@@ -84,7 +85,7 @@
     "No tags found": "Nie znaleziono tagów",
     "Oldest": "Najstarsze",
     "PHP": "PHP",
-    "PHP & DevOps Blog": "Blog PHP & DevOps",
+    "PHP & DevOps Blog": "Blog PHP i DevOps",
     "PHP (Laravel, Symfony)": "PHP (Laravel, Symfony)",
     "PHP Developer & DevOps Engineer": "Programista PHP i inżynier DevOps",
     "PHP Frameworks": "Frameworki PHP",
